--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "base-cli-process",
-  "description": "Commonly used config mappings for the base-cli plugin. Also pre-processes the given object with base-cli-schema before calling `.process()`",
+  "description": "Normalizers for common argv commands handled by the base-cli plugin. Also pre-processes the given object with base-cli-schema before calling `.process()`",
   "version": "0.1.0",
   "homepage": "https://github.com/jonschlinkert/base-cli-process",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
