--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
   "dependencies": {
     "arr-union": "^3.1.0",
     "arrayify-compact": "^0.2.0",
-    "base-cli": "^0.4.26",
-    "base-cli-schema": "^0.1.3",
-    "base-config-process": "^0.1.0",
+    "base-cli": "^0.5.0",
+    "base-cli-schema": "^0.1.7",
+    "base-config-process": "^0.1.1",
+    "base-cwd": "^0.1.6",
     "base-option": "^0.7.0",
     "base-pkg": "^0.2.0",
     "debug": "^2.2.0",
     "export-files": "^2.1.1",
+    "fs-exists-sync": "^0.1.0",
     "kind-of": "^3.0.2",
     "lazy-cache": "^1.0.3",
     "log-utils": "^0.1.0",
-    "merge-deep": "^2.0.2",
+    "merge-deep": "^3.0.0",
     "mixin-deep": "^1.1.3",
     "object.pick": "^1.1.2",
     "os-homedir": "^1.0.1",
@@ -60,9 +62,9 @@
   "keywords": [
     "base",
     "baseplugin",
-    "commands",
+    "cli",
     "command-line",
-    "cli"
+    "commands"
   ],
   "verb": {
     "run": true,
@@ -82,12 +84,15 @@
       ]
     },
     "reflinks": [
-      "verb",
+      "base-cli",
       "base-cli-schema",
-      "base-cli"
+      "verb"
     ],
     "lint": {
       "reflinks": true
     }
+  },
+  "base": {
+    "toc": true
   }
 }
