--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "base-config-process": "^0.1.1",
     "base-cwd": "^0.1.6",
     "base-option": "^0.7.0",
-    "base-pkg": "^0.2.0",
+    "base-pkg": "^0.2.2",
     "debug": "^2.2.0",
     "export-files": "^2.1.1",
     "fs-exists-sync": "^0.1.0",
@@ -39,6 +39,7 @@
     "mixin-deep": "^1.1.3",
     "object.pick": "^1.1.2",
     "os-homedir": "^1.0.1",
+    "pad-right": "^0.2.2",
     "union-value": "^0.2.3"
   },
   "devDependencies": {
