--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base-cli-process",
   "description": "Normalizers for common argv commands handled by the base-cli plugin. Also pre-processes the given object with base-cli-schema before calling `.process()`",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "homepage": "https://github.com/jonschlinkert/base-cli-process",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/base-cli-process",
@@ -47,6 +47,7 @@
     "base": "^0.8.1",
     "base-data": "^0.4.4",
     "base-pipeline": "^0.2.5",
+    "base-store": "^0.4.2",
     "delete": "^0.3.1",
     "engine-base": "^0.1.2",
     "gulp": "^3.9.1",
