--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "arr-union": "^3.1.0",
     "arrayify-compact": "^0.2.0",
     "base-cli": "^0.5.0",
-    "base-cli-schema": "^0.1.18",
-    "base-config-process": "^0.1.3",
-    "base-cwd": "^0.1.6",
-    "base-option": "^0.7.0",
-    "base-pkg": "^0.2.2",
+    "base-cli-schema": "^0.1.19",
+    "base-config-process": "^0.1.6",
+    "base-cwd": "^0.2.0",
+    "base-option": "^0.8.2",
+    "base-pkg": "^0.2.3",
     "debug": "^2.2.0",
     "export-files": "^2.1.1",
     "fs-exists-sync": "^0.1.0",
+    "is-valid-app": "^0.1.0",
     "kind-of": "^3.0.3",
     "lazy-cache": "^2.0.1",
     "log-utils": "^0.1.4",
@@ -43,12 +44,12 @@
     "union-value": "^0.2.3"
   },
   "devDependencies": {
-    "assemble-core": "^0.17.1",
-    "base": "^0.8.1",
-    "base-data": "^0.4.4",
-    "base-pipeline": "^0.2.5",
-    "base-store": "^0.4.2",
-    "delete": "^0.3.1",
+    "assemble-core": "^0.21.0",
+    "base": "^0.10.0",
+    "base-data": "^0.5.0",
+    "base-pipeline": "^0.3.1",
+    "base-store": "^0.4.4",
+    "delete": "^0.3.2",
     "engine-base": "^0.1.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
@@ -60,7 +61,8 @@
     "helper-example": "^0.1.0",
     "map-schema": "^0.2.3",
     "minimist": "^1.2.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.5.3",
+    "verb-readme-generator": "^0.1.13"
   },
   "keywords": [
     "base",
@@ -93,7 +95,8 @@
       "base-option",
       "base-pipeline",
       "templates",
-      "verb"
+      "verb",
+      "verb-readme-generator"
     ],
     "lint": {
       "reflinks": true
