--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "lib"
+    "lib",
+    "README.md"
   ],
   "main": "index.js",
   "engines": {
@@ -26,8 +27,8 @@
     "base-cli": "^0.5.0",
     "base-cli-schema": "^0.1.19",
     "base-config-process": "^0.1.7",
-    "base-cwd": "^0.2.1",
-    "base-option": "^0.8.3",
+    "base-cwd": "^0.3.1",
+    "base-option": "^0.8.4",
     "base-pkg": "^0.2.4",
     "debug": "^2.2.0",
     "export-files": "^2.1.1",
@@ -43,17 +44,17 @@
     "union-value": "^0.2.3"
   },
   "devDependencies": {
-    "assemble-core": "^0.21.0",
-    "base": "^0.10.0",
-    "base-data": "^0.5.0",
-    "base-pipeline": "^0.3.1",
+    "assemble-core": "^0.25.0",
+    "base": "^0.11.1",
+    "base-data": "^0.6.0",
+    "base-pipeline": "^0.3.2",
     "base-store": "^0.4.4",
     "delete": "^0.3.2",
     "engine-base": "^0.1.2",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-format-md": "^0.1.9",
-    "gulp-istanbul": "^0.10.4",
+    "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-unused": "^0.1.2",
     "helper-coverage": "^0.1.3",
@@ -61,14 +62,26 @@
     "map-schema": "^0.2.3",
     "minimist": "^1.2.0",
     "mocha": "^2.5.3",
-    "verb-readme-generator": "^0.1.13"
+    "verb-readme-generator": "^0.1.19"
   },
   "keywords": [
+    "api",
+    "app",
+    "application",
     "base",
     "baseplugin",
+    "building-blocks",
     "cli",
     "command-line",
-    "commands"
+    "commands",
+    "create",
+    "framework",
+    "plugin",
+    "plugins",
+    "process",
+    "tool",
+    "toolkit",
+    "tools"
   ],
   "verb": {
     "run": true,
