--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "lib",
-    "verbfile.js"
+    "lib"
   ],
   "main": "index.js",
   "engines": {
@@ -30,43 +29,43 @@
     "arrayify-compact": "^0.2.0",
     "base-cli": "^0.5.0",
     "base-cli-schema": "^0.1.19",
-    "base-config-process": "^0.1.8",
-    "base-cwd": "^0.3.2",
+    "base-config-process": "^0.1.9",
+    "base-cwd": "^0.3.4",
     "base-option": "^0.8.4",
     "base-pkg": "^0.2.4",
-    "debug": "^2.2.0",
+    "debug": "^2.6.2",
     "export-files": "^2.1.1",
     "fs-exists-sync": "^0.1.0",
-    "is-valid-app": "^0.2.0",
-    "kind-of": "^3.0.3",
-    "lazy-cache": "^2.0.1",
-    "log-utils": "^0.1.4",
+    "is-valid-app": "^0.2.1",
+    "kind-of": "^3.1.0",
+    "lazy-cache": "^2.0.2",
+    "log-utils": "^0.2.1",
     "merge-deep": "^3.0.0",
-    "mixin-deep": "^1.1.3",
-    "object.pick": "^1.1.2",
+    "mixin-deep": "^1.2.0",
+    "object.pick": "^1.2.0",
     "pad-right": "^0.2.2",
-    "union-value": "^0.2.3"
+    "union-value": "^1.0.0"
   },
   "devDependencies": {
-    "assemble-core": "^0.25.0",
+    "assemble-core": "^0.31.0",
     "base": "^0.11.1",
     "base-data": "^0.6.0",
     "base-pipeline": "^0.3.2",
     "base-store": "^0.4.4",
     "delete": "^0.3.2",
-    "engine-base": "^0.1.2",
+    "engine-base": "^0.1.3",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
-    "gulp-format-md": "^0.1.9",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-unused": "^0.1.2",
+    "gulp-format-md": "^0.1.11",
+    "gulp-istanbul": "^1.1.1",
+    "gulp-mocha": "^3.0.0",
+    "gulp-unused": "^0.2.1",
     "helper-coverage": "^0.1.3",
     "helper-example": "^0.1.0",
-    "map-schema": "^0.2.3",
+    "map-schema": "^0.2.4",
     "minimist": "^1.2.0",
-    "mocha": "^2.5.3",
-    "verb-readme-generator": "^0.1.19"
+    "mocha": "^3.2.0",
+    "verb-generate-readme": "^0.4.3"
   },
   "keywords": [
     "api",
